--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -18,7 +18,8 @@ body {
   background-color: {{ site.page-col | default: "#FFFFFF" }};
   {% if site.page-img %}
   background-image: url({{ site.page-img | relative_url }});
-  background-attachment: fixed;
+  background-attachment: scroll;
+  background-size: cover;
   {% endif %}
 }
 p {
