--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -382,7 +382,8 @@ footer {
   {% if site.footer-img %}
     background-image: url({{ site.footer-img | relative_url }});
     background-attachment: fixed;
-    background-size: cover;
+    background-size: contain;
+    background-position: center bottom;
   {% endif %}
 }
 
