--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -20,7 +20,7 @@ body {
   background-image: url({{ site.page-img | relative_url }});
   background-attachment: scroll;
   background-repeat: no-repeat;
-  background-size: auto 100%;
+  background-size: cover;
   background-position: center center;
   {% endif %}
 }
@@ -384,7 +384,7 @@ footer {
   {% if site.footer-img %}
     background-image: url({{ site.footer-img | relative_url }});
     background-attachment: scroll;
-    background-size: cover;
+    background-size: contain;
     background-position: center bottom;
     background-repeat: no-repeat;
   {% endif %}
