--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -385,7 +385,7 @@ footer {
     background-image: url({{ site.footer-img | relative_url }});
     background-attachment: scroll;
     background-size: contain;
-    background-position: center bottom;
+    background-position: right bottom;
     background-repeat: no-repeat;
   {% endif %}
 }
